2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs: Updated to new
	  mcs.

2010-07-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Fixed
	  'Bug 623308 - ArgumentOutOfRangeException after typing ( for
	  method params'.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/NRefactoryParser.cs:
	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	* MonoDevelop.CSharp.Highlighting/MoveToUsagesHandler.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Track API changes.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/NRefactoryParser.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Resolver/NewCSharpExpressionFinder.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryIndexerParameterDataProvider.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryTemplateParameterDataProvider.cs:
	  Track API changes.

2010-07-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Track
	  API changes.

2010-07-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	* MonoDevelop.CSharp.Resolver/TextEditorResolverProvider.cs:
	  Track API changes.

2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs:
	* MonoDevelop.CSharp.Completion/NRefactoryIndexerParameterDataProvider.cs: