@@ -1,5 +1,10 @@
 2010-07-21  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Track
+	  API changes.
+
+2010-07-21  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharp.Parser/CSharpParser.cs: Updated to new
 	  mcs.
 
